--- a/manifest.json
+++ b/manifest.json
@@ -11,12 +11,12 @@
     {
       "src": "img/logo.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "img/logo.png"
     },
     {
       "src": "img/logo.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "img/logo.png"
     }
   ]
 }
